facu funciono el css rancio

--- a/src/main/resources/templates/Untitled.hbs
+++ b/src/main/resources/templates/Untitled.hbs
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="Untitled.css">
+  <link rel="stylesheet" type="text/css"   href="Untitled.css">
 </head>
 
 <body>
@@ -41,9 +41,6 @@
   <div class="py-5">
     <div class="container">
 	<h1 class="">Hogares</h1>
-      
-      
-      
       <div class="row">
         <div class="col-md-12">
           <table class="table">
@@ -57,12 +54,12 @@
             <tbody>
 						
 						
-{{#each user}}
-					<tr>
-						<td> {{ nombre }} </td>
-						<td> {{ apellido }} </td>
-					</tr>
-				{{/each}}
+			{{#each user}}
+				<tr>
+					<td> {{ nombre }} </td>
+					<td> {{ apellido }} </td>
+				</tr>
+			{{/each}}
 			
 			
 						
@@ -82,5 +79,8 @@
     </div>
   </div>
 </body>
+
+
+
 
 </html>
