--- a/src/main/resources/templates/Untitled.hbs
+++ b/src/main/resources/templates/Untitled.hbs
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" type="text/css"   href="Untitled.css">
+  <link rel="stylesheet" href="Untitled.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,7 +17,13 @@
           <b> SSG</b>
         </a>
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link" href="#"></a></li>
+          <div class="col-md-12" style="">
+            <div class="col-md-12" style="">
+              <input type="email" class="form-control" placeholder="Ingrese al usuario">
+              <form class="">
+              </form>
+            </div>
+          </div><button type="submit" class="btn btn-primary">Buscar</button>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item"> <a class="nav-link text-primary" href="#" contenteditable="true">Log Out</a> </li>
@@ -25,44 +31,33 @@
       </div>
     </div>
   </nav>
-  <div class="py-5" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          
-          <div class="col-md-12"><input type="email" class="form-control" style="" placeholder="Ingrese al usuario">
-            <form class="">
-              <button type="submit" class="btn btn-primary" style="">Buscar</button> </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="py-5">
     <div class="container">
-	<h1 class="">Hogares</h1>
+      <h1 class="">Hogares</h1>
       <div class="row">
         <div class="col-md-12">
           <table class="table">
             <thead>
               <tr>
-                <th>#</th>
-                <th>Cliente</th>
-                <th contenteditable="true">Consumo</th>
+                <th>Nombre</th>
+                <th contenteditable="true">Apellido</th>
+				<th contenteditable="true">Agregar Dispositivo</th>
               </tr>
             </thead>
             <tbody>
-						
-						
+              
 			{{#each user}}
 				<tr>
 					<td> {{ nombre }} </td>
 					<td> {{ apellido }} </td>
+					<td>
+						<button type="button" class="btn btn-default btn-sm">
+						<span class="glyphicon glyphicon-plus"></span> +
+						</button>
+					</td>
 				</tr>
 			{{/each}}
-			
-			
-						
+			  
             </tbody>
           </table>
         </div>
@@ -73,14 +68,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p class="mb-0">© 2014-2018 SEE. All rights reserved</p>
+          <p class="mb-0">© 2014-2018 SSG. All rights reserved</p>
         </div>
       </div>
     </div>
   </div>
 </body>
-
-
-
 
 </html>
