--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="Untitled.css">
+  <link rel="stylesheet" href="Untitled2.css">
 </head>
 
 <body>
@@ -41,32 +41,78 @@
           </ul>
         </div>
       </div>
-      <h1 class="">Clientes:&nbsp;</h1>
+      
+      
+      
+     
+      <h1 class="">Clientes: {{cliente.nombre}} {{cliente.apellido}}</h1>
+      
+      
+      
+      
       <div class="row">
         <div class="col-md-12">
-          {{#each user}}
-          {{/each}}
+        
+        
+        
+        <div class="py-5 text-center" style="">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-9 p-3"></div>
+        <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> <a class="btn btn-primary btn-lg" href="#">Agregar nuevo dispositivo<br></a> </div>
+      </div>
+    </div>
+  </div>
+
+
+			<h1>Dispositivos estandares</h1>
           <table class="table">
             <thead>
               <tr>
-                <th>Dispositivo</th>
-                <th contenteditable="true">Apellido</th>
-                <th contenteditable="true">Agregar Dispositivo</th>
+                <th>id Dispositivo     </th>
+                <th contenteditable="true">Nombre</th>
+                <th contenteditable="true">Consumo</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td> {{ nombre }} </td>
-                <td> {{ apellido }} </td>
-                <td>
-                  <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                  </div>
-                </td>
-              </tr>
+
+
+
             </tbody>
           </table>
+          
+          
+          
+          
+          
+          <h1>Dispositivos inteligentes</h1>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>id Dispositivo     </th>
+                <th contenteditable="true">Nombre</th>
+                <th contenteditable="true">Consumo</th>
+              </tr>
+            </thead>
+            <tbody>
+				{{#each user}}
+					<tr>
+						<td> {{ id}} </td>
+						<td> {{ nombre }} </td>
+						<td> {{ consumo }} </td>
+						<td>
+						
+						</td>
+					</tr>
+				{{/each}}
+            </tbody>
+          </table>
+          
+          
+          
+          
+          
+          
         </div>
       </div>
     </div>
@@ -83,12 +129,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p class="mb-0">© 2014-2018 Pingendo. All rights reserved</p>
+          <p class="mb-0">© 2014-2018 SSG. All rights reserved</p>
         </div>
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
   <div class="py-5">
     <div class="container">
       <div class="row">
