--- a/src/main/resources/templates/user.hbs
+++ b/src/main/resources/templates/user.hbs
@@ -1,29 +1,136 @@
 <html>
-	<body>
-		Sesión iniciada como: {{cliente.usuario}}
+	<head> 
+		<meta charset="utf-8">
+		<title> Bienvenido Usuario </title>
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="user.css">
+		<!-- Opcional <link rel="shortcut icon" type="image/x-icon" href="miCarpeta/nombre.ico"> -->
 		
-		<button type="button" >Cerrar Sesión</button>
-		<h1>ANDUVO</h1>
-	<table class="table">
-            <thead>
-              <tr>
-                <th>Nombre</th>
-                <th>Estado</th>
-                <th>Ultima medición</th>
-              </tr>
-            </thead>
+		
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+	</head>
+	
+	<body>
+		<header>
+			<div class="container-fluid">
+			Sesión iniciada como: {{cliente.usuario}}
+		
+			<button class="btn btn-sm btn-default">Cerrar Sesión</button> <!--no se porque no me cambia-->
+			</div>
+		</header>
+		
+		<br/>
+		<br/>
+
+		<div class="container"> <!-- aca estoy haciendo trampa porque solo lo agrego para que los botones me aparezcan centrados-->
+			<div class="table-responsive">
+				<h3> Seleccione que consumo quiere ver </h3>
+			</table>
+		</div>
+		
+        <br/>
             
-            <tbody>
-              
-			{{#each dispositivos}}
-				<tr>
-					<td> {{ nombre }} </td>
-					<td> {{ estado }} </td>
-					<td> {{ ultimaMedicion }}</td>
-				</tr>
-			{{/each}}
-			  
-            </tbody>
-          </table>
+    	<div class="form-group">
+			<a href="./Clientes/{{id}}">	
+				<button type="button" class="btn btn-block btn-primary">
+				Consumo recomendado
+				</button>
+			</a> 
+		</div>		
+		
+		<div class="form">
+			<div>
+				Elija el rango de fechas
+				<input id="Fechas" type="text" />
+				</button>
+			</div>
+		</form>
+		
+		<script>
+			$('#Fechas').daterangepicker({ "autoApply": true,  autoUpdateInput: false,
+    										locale: {
+          										cancelLabel: 'Clear'
+      										}
+										});
+										
+			$('#Fechas').on('apply.daterangepicker', function(ev, picker) {
+      			$(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
+ 			 });
+
+ 			$('#Fechas').on('cancel.daterangepicker', function(ev, picker) { $(this).val(''); });
+		</script>	
+		
+		<br/>
+		
+		<div class="form">					
+			<a href="./Clientes/{{id}}">
+							
+				<button type="button" class="btn btn-block btn-primary">
+				Consumo actual
+				</button>
+			</a> 
+		</div>
+
+		<br/>
+	 
+		<div class="row">
+			<div class="col-md-12 block-center">
+				<ul class="list-group">
+					{{#each dispositivos}}
+					<div class="list-group-item">
+						<tr>
+							<h4> <td> {{ nombre }} </td> </h4>
+							<p> 
+								<h6> Estado: {{ estado }} </h6>
+								<h6> Ultima Medicion: {{ ultimaMedicion }} </h6>
+							</p>
+						</tr>
+					</div>
+					{{/each}}
+				</ul>
+			</div>
+		</div>
+		
+		<br/>
+		
+		<div class="container">
+			<div class="table-responsive"> <!--no se porque no me cambia-->
+				<table class="table">
+            		<thead>
+              			<tr class="active"> <!--no se porque no me cambia-->
+                			<th>Nombre</th>
+                			<th>Estado</th>
+                			<th>Ultima medición</th>
+             			</tr>
+            		</thead>
+            
+            		<tbody>
+              		{{#each dispositivos}}
+						<tr>
+							<td> {{ nombre }} </td>
+							<td> {{ estado }} </td>
+							<td> {{ ultimaMedicion }} </td>
+						</tr>
+					{{/each}}
+			  		</tbody>
+          		</table>
+			</table>
+		</div>
+			
+		<div class="py-3">
+    		<div class="container">
+      			<div class="row">
+        			<div class="col-md-12 text-center">
+          				<p class="mb-0">© 2014-2018 SSG. All rights reserved</p>
+        			</div>
+	      		</div>
+	    	</div>
+  		</div>
 	</body>
+	
+	
 </html>
