--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -59,7 +59,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-9 p-3"></div>
-        <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> <a class="btn btn-primary btn-lg" href="#">Agregar nuevo dispositivo<br></a> </div>
       </div>
     </div>
   </div>
@@ -76,7 +75,14 @@
             </thead>
             <tbody>
 
+				{{#each estandares}}
+					<tr>
+						<td> {{ id }} </td>
+						<td> {{ nombre }} </td>
+						<td> {{ consumo }} </td>
 
+					</tr>
+				{{/each}}
 
             </tbody>
           </table>
@@ -95,7 +101,7 @@
               </tr>
             </thead>
             <tbody>
-				{{#each user}}
+				{{#each inteligentes}}
 					<tr>
 						<td> {{ id}} </td>
 						<td> {{ nombre }} </td>
@@ -110,7 +116,7 @@
           
           
           
-          
+          					
           
           
         </div>
@@ -121,7 +127,20 @@
     <div class="container">
       <div class="row">
         <div class="col-md-9 p-3"></div>
-        <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> <a class="btn btn-primary btn-lg" href="#">Agregar nuevo dispositivo<br></a> </div>
+        <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> 
+
+       		
+       		<a    href="./Clientes/{{id}}/DispositivosInteligentes">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Agregar nuevo dispositivo
+				</button>
+			</a>
+       
+        </div>
+        
+        
+        
+        
       </div>
     </div>
   </div>
