--- a/src/main/resources/templates/Untitled.hbs
+++ b/src/main/resources/templates/Untitled.hbs
@@ -14,7 +14,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
           <i class="fa d-inline fa-lg fa-circle"></i>
-          <b> SSG</b>
+          <b> SSG      {{names}}       </b>
         </a>
         <ul class="navbar-nav mx-auto">
           <div class="col-md-12" style="">
