--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="Untitled2.css">
+  <link rel="stylesheet" href="./../../../Untitled2.css">
 </head>
 
 <body>
@@ -130,7 +130,7 @@
         <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> 
 
        		
-       		<a    href="./Clientes/{{id}}/DispositivosInteligentes">			
+       		<a    href="./{{id}}/DispositivosInteligentes">			
 				<button type="button" class="btn btn-default btn-sm">
 				<span class="glyphicon glyphicon-plus"></span> Agregar nuevo dispositivo
 				</button>
