--- a/src/main/resources/templates/Inteligente.hbs
+++ b/src/main/resources/templates/Inteligente.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="Untitled.css">
+  <link rel="stylesheet" href=""./../../../Untitled.css"">
 </head>
 
 <body>
@@ -45,19 +45,26 @@
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
+ 
   <div class="py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-5 p-4" style="	box-shadow: 0px 0px 4px  black;	background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(https://pingendo.com/site-assets/cover.jpg);	background-position: top left, top left;	background-size: 100%, 100%;	background-repeat: repeat, repeat;"></div>
         <div class="col-md-7 p-4">
           <h3 class="mb-3">Ingrese el nuevo dispositivo inteligente</h3>
-          <form>
+          <form      action="/DispositivosInteligentes" method="post"     >
             <div class="form-row">
               <div class="form-group col-md-12"><input type="email" class="form-control" placeholder="Nombre"></div>
             </div>
             <input type="email" class="form-control" placeholder="Restriccion minima"><input type="email" class="form-control" placeholder="Restriccion maxima">
-          </form><button type="submit" class="btn btn-primary">Cancelar</button><button type="submit" class="btn btn-primary">Agregar</button>
+          	
+          	
+          
+          </form>
+          	<a href="./../../../">
+          		<button type="submit" class="btn btn-primary">Cancelar</button><button type="submit" class="btn btn-primary">Agregar
+          		</button>
+          	</a>
         </div>
       </div>
     </div>
