--- a/src/main/resources/templates/consumo.hbs
+++ b/src/main/resources/templates/consumo.hbs
@@ -22,14 +22,14 @@
 		<div class="container-fluid">
 		
 			<h4> Su consumo es </h4>
-			{{cliente.consumoTotal}} <!--Cambiar esto por el de periodo-->	
+			{{consumo}} 	
 		</div>
 		
 		<div class="py-3">
     		<div class="container-fluid">
       			<div class="row">
         			<div class="col-md-9 form">
-          				<a href="./Clientes/{{id}}">		
+          				<a href=".">		
 							<button type="button" class="btn btn-sm ">
 							Volver atras
 							</button>
