--- a/src/main/resources/templates/simplex.hbs
+++ b/src/main/resources/templates/simplex.hbs
@@ -19,18 +19,29 @@
 		
 		<br/>
 		<br/>
-		<div class="container-fluid">
 		
-			<h4> El consumo recomendado es </h4>
-			Un numero
-			{{simplex.recomendacion}} <!--Esto no anda al proposito, ver-->	
+		<div class="row">
+			<div class="col-md-12 block-center">
+				<ul class="list-group">
+					{{#each optimizacionRecomendada}}
+					<div class="list-group-item">
+						<tr>
+							<h4> <td> {{ nombreDispositivo }} </td> </h4>
+							<p> 
+								<h6> Consumo optimo: {{ consumoRecomendado }} <h6>
+							</p>
+						</tr>
+					</div>
+					{{/each}}
+				</ul>
+			</div>
 		</div>
 		
 		<div class="py-3">
     		<div class="container-fluid">
       			<div class="row">
         			<div class="col-md-9 form">
-          				<a href="./Clientes/{{id}}">		
+          				<a href=".">		
 							<button type="button" class="btn btn-sm ">
 							Volver atras
 							</button>
@@ -40,7 +51,6 @@
 	    	</div>
   		</div>
 			
-		<!--Se me hace que esta no es la mejor forma de separar, pero bueno-->
 		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/> 
 		<div class="py-3">
     		<div class="container">
