--- a/src/main/resources/templates/user.hbs
+++ b/src/main/resources/templates/user.hbs
@@ -5,8 +5,6 @@
   		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="user.css">
-		<!-- Opcional <link rel="shortcut icon" type="image/x-icon" href="miCarpeta/nombre.ico"> -->
-		
 		
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
@@ -19,14 +17,14 @@
 			<div class="container-fluid">
 			Sesión iniciada como: {{cliente.usuario}}
 		
-			<button class="btn btn-sm btn-default">Cerrar Sesión</button> <!--no se porque no me cambia-->
+			<button class="btn btn-sm btn-default">Cerrar Sesión</button> 
 			</div>
 		</header>
 		
 		<br/>
 		<br/>
 
-		<div class="container"> <!-- aca estoy haciendo trampa porque solo lo agrego para que los botones me aparezcan centrados-->
+		<div class="container"> 
 			<div class="table-responsive">
 				<h3> Seleccione que consumo quiere ver </h3>
 			</table>
@@ -54,7 +52,7 @@
 						Elija el rango de fechas
 						<input id="Fechas" type="text" name="periodo" />
 					</div>		
-		
+		<br/>
 				<button type="submit" formmethod="post"class="btn btn-block btn-primary">
 					Consumo en el periodo
 				</button>
@@ -114,7 +112,7 @@
     		<div class="container">
       			<div class="row">
         			<div class="col-md-12 text-center">
-          				<p class="mb-0">© 2014-2018 SSG. All rights reserved</p>
+          				<p class="mb-0">© 2018 DDS, Inc</p>
         			</div>
 	      		</div>
 	    	</div>
