--- a/src/main/resources/templates/Inteligente.hbs
+++ b/src/main/resources/templates/Inteligente.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href=""./../../../Untitled.css"">
+  <link rel="stylesheet" href="./../../../Untitled.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
               <form class="">
               </form>
             </div>
-          </div><button type="submit" class="btn btn-primary">Buscar  {{wea}} </button>
+          </div><button type="submit" class="btn btn-primary">Buscar  </button>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item"> <a class="nav-link text-primary" href="#" contenteditable="true">Log Out</a> </li>
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-pills">
-            <li class="nav-item"> <a href="#" class="active nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+            <li        class="nav-item"> <a href="./../../../" class="active nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#">Inteligente</a> </li>
             <li class="nav-item"> <a href="#" class="nav-link" contenteditable="true">Estandar</a> </li>
           </ul>
@@ -52,19 +52,42 @@
         <div class="col-md-5 p-4" style="	box-shadow: 0px 0px 4px  black;	background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(https://pingendo.com/site-assets/cover.jpg);	background-position: top left, top left;	background-size: 100%, 100%;	background-repeat: repeat, repeat;"></div>
         <div class="col-md-7 p-4">
           <h3 class="mb-3">Ingrese el nuevo dispositivo inteligente</h3>
-          <form      action="/DispositivosInteligentes" method="post"     >
+         
+         
+         
+          <form      action="/Clientes/:idCliente/DispositivosInteligentes" method="post"     >
             <div class="form-row">
-              <div class="form-group col-md-12"><input type="email" class="form-control" placeholder="Nombre"></div>
+              <div class="form-group col-md-12">
+              
+              
+              <input name="nombreDispo" class="form-control" placeholder="Nombre">
+              
+              
+              </div>
+              
             </div>
-            <input type="email" class="form-control" placeholder="Restriccion minima"><input type="email" class="form-control" placeholder="Restriccion maxima">
+            
+            
+            <input name="minima"  class="form-control" placeholder="Restriccion minima">
+            <input name="maxima"   class="form-control" placeholder="Restriccion maxima">
           	
-          	
+          	<button type="submit" class="btn btn-primary">Agregar
+          		</button>
           
           </form>
+          
+          
+          
+          
+          
           	<a href="./../../../">
-          		<button type="submit" class="btn btn-primary">Cancelar</button><button type="submit" class="btn btn-primary">Agregar
-          		</button>
-          	</a>
+          		<button type="submit" class="btn btn-primary">Cancelar</button>
+          	</a>	
+
+
+
+          	
+          	
         </div>
       </div>
     </div>
