--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -18,16 +18,10 @@
           <b> SSG</b>
         </a>
         <ul class="navbar-nav mx-auto">
-          <div class="col-md-12" style="">
-            <div class="col-md-12" style="">
-              <input type="email" class="form-control" placeholder="Ingrese al usuario">
-              <form class="">
-              </form>
-            </div>
-          </div><button type="submit" class="btn btn-primary">Buscar</button>
+         
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="#" contenteditable="true">Log Out</a> </li>
+          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
         </ul>
       </div>
     </div>
@@ -37,7 +31,7 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-tabs">
-            <li class="nav-item"> <a href="#" class="active nav-link"><i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+            <li class="nav-item"> <a href="./../../../" class="active nav-link"><i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
           </ul>
         </div>
       </div>
@@ -45,7 +39,10 @@
       
       
      
-      <h1 class="">Clientes: {{cliente.nombre}} {{cliente.apellido}}</h1>
+      <h1 class="">Cliente: {{cliente.nombre}} {{cliente.apellido}}</h1>
+      <h1 class="">DNI: {{cliente.nroDocumento}} </h1>
+      <h1 class="">Telefono: {{cliente.telefono}} </h1>
+      <h1 class="">Direccion: {{cliente.domicilioServicio}} </h1>
       
       
       
@@ -68,7 +65,6 @@
           <table class="table">
             <thead>
               <tr>
-                <th>id Dispositivo     </th>
                 <th contenteditable="true">Nombre</th>
                 <th contenteditable="true">Consumo</th>
               </tr>
@@ -77,7 +73,6 @@
 
 				{{#each cliente.dispositivosEstandar}}
 					<tr>
-						<td> {{ id }} </td>
 						<td> {{ nombre }} </td>
 						<td> {{ consumo }} </td>
 
@@ -95,7 +90,6 @@
           <table class="table">
             <thead>
               <tr>
-                <th>id Dispositivo     </th>
                 <th contenteditable="true">Nombre</th>
                 <th contenteditable="true">Consumo</th>
               </tr>
@@ -103,7 +97,6 @@
             <tbody>
 				{{#each cliente.dispositivosInteligentes}}
 					<tr>
-						<td> {{ id}} </td>
 						<td> {{ nombre }} </td>
 						<td> {{ consumo }} </td>
 						<td>
