--- a/src/main/resources/templates/Untitled.hbs
+++ b/src/main/resources/templates/Untitled.hbs
@@ -17,16 +17,9 @@
           <b> SSG      {{names}}       </b>
         </a>
         <ul class="navbar-nav mx-auto">
-          <div class="col-md-12" style="">
-            <div class="col-md-12" style="">
-              <input type="email" class="form-control" placeholder="Ingrese al usuario">
-              <form class="">
-              </form>
-            </div>
-          </div><button type="submit" class="btn btn-primary">Buscar</button>
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="#" contenteditable="true">Log Out</a> </li>
+          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
         </ul>
       </div>
     </div>
