Se valida que no sea vacio del rango de fechas

--- a/src/main/resources/templates/user.hbs
+++ b/src/main/resources/templates/user.hbs
@@ -50,7 +50,7 @@
 		<form action="./consumoEnPeriodo" method="POST" >					
 					<div>
 						Elija el rango de fechas
-						<input id="Fechas" type="text" name="periodo" />
+						<input id="Fechas" type="text" required name="periodo" />
 					</div>		
 		<br/>
 				<button type="submit" formmethod="post"class="btn btn-block btn-primary">
