cambios pre entrega

--- a/src/main/resources/templates/Untitled.hbs
+++ b/src/main/resources/templates/Untitled.hbs
@@ -47,7 +47,7 @@
 					<td> {{ consumoTotal }} </td>
 					<td>
 					
-						<a href="./Clientes/{{id}}">
+						<a href="./admin/Clientes/{{id}}">
 						
 								<button type="button" class="btn btn-default btn-sm">
 								<span class="glyphicon glyphicon-plus"></span> +
