QweryParam Dispositivos hechos

--- a/src/main/resources/templates/Inteligente.hbs
+++ b/src/main/resources/templates/Inteligente.hbs
@@ -31,9 +31,12 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-pills">
-            <li        class="nav-item"> <a href="./../../../" class="active nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="">Inteligente</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="./DispositivosEstandar" >Estandar</a> </li>
+            <li        class="nav-item"> <a href="./../../../" class="nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+           
+           
+           
+            <li class="nav-item"> <a class="nav-link active" href="#">Inteligente</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/admin/clientes/{{id}}/dispositivos?tipo=estandar" >Estandar</a> </li>
           </ul>
         </div>
       </div>
