--- a/src/main/resources/templates/estandars.hbs
+++ b/src/main/resources/templates/estandars.hbs
@@ -14,7 +14,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
-          <i class="fa d-inline fa-lg fa-circle"></i>
+          <i class="fa d-inline fa-lg fa-circle"></i>z
           <b> SSG</b>
         </a>
         <ul class="navbar-nav mx-auto">
@@ -31,9 +31,11 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-pills">
-            <li        class="nav-item"> <a href="./../../../" class="active nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="./DispositivosInteligentes">Inteligente</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="" >Estandar</a> </li>
+            <li        class="nav-item"> <a href="./../../../" class="nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+            
+            
+            <li class="nav-item"> <a class="nav-link" href="/admin/clientes/{{id}}/dispositivos?tipo=inteligente">Inteligente</a> </li>
+            <li class="nav-item"> <a class="nav-link active" href="#" >Estandar</a> </li>
           </ul>
         </div>
       </div>
