--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -122,12 +122,22 @@
         <div class="col-md-9 p-3"></div>
         <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> 
 
+
+
+
+
+
+
        		
-       		<a    href="./{{id}}/DispositivosInteligentes">			
+       		<a    href="/admin/clientes/{{id}}/dispositivos">			
 				<button type="button" class="btn btn-default btn-sm">
 				<span class="glyphicon glyphicon-plus"></span> Agregar nuevo dispositivo
 				</button>
 			</a>
+       
+       
+       
+       
        
         </div>
         
