--- a/src/main/resources/templates/Inteligente.hbs
+++ b/src/main/resources/templates/Inteligente.hbs
@@ -52,10 +52,10 @@
          
          
          
-          <form      action="/Clientes/:idCliente/DispositivosInteligentes" method="post"     >
+          <form      action="/admin/clientes/{{id}}/dispositivos" method="post"     >
             <div class="form-row">
               <div class="form-group col-md-12">
-              
+              <input type="hidden" name="tipo" value="inteligente">
               
               <input type="text" name="nombreDispo" class="form-control" placeholder="Nombre">
               
