--- a/src/main/resources/templates/estandars.hbs
+++ b/src/main/resources/templates/estandars.hbs
@@ -51,9 +51,10 @@
          
          
          
-          <form      action="/Clientes/:idCliente/DispositivosEstandar" method="post"     >
+          <form      action="/admin/clientes/{{id}}/dispositivos" method="post"     >
             <div class="form-row">
               <div class="form-group col-md-12">
+              <input type="hidden" name="tipo" value="estandar">
               
               
               <input type="text" name="nombreDispo" class="form-control" placeholder="Nombre">
