--- a/src/main/resources/templates/simplex.hbs
+++ b/src/main/resources/templates/simplex.hbs
@@ -4,30 +4,27 @@
 		<title> Consumo Recomendado </title>
   		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="simplex.css">
 	</head>
 	
 	<body>
 		<header>
 			<div class="container-fluid">
 			Sesión iniciada como: {{cliente.usuario}}
-		
-			<button class="btn btn-sm btn-default">Cerrar Sesión</button> <!--no se porque no me cambia el btn-default -->
+			<button class="btn btn-sm btn-default">Cerrar Sesión</button> 
 			</div>
 		</header>
 		
 		<br/>
 		<br/>
-		
 		<div class="row">
 			<div class="col-md-12 block-center">
 				<ul class="list-group">
-					{{#each optimizacionRecomendada}}
+					{{#each recomendaciones}}
 					<div class="list-group-item">
 						<tr>
-							<h4> <td> {{ nombreDispositivo }} </td> </h4>
+							<h4> <td> {{ @key }} </td> </h4>
 							<p> 
-								<h6> Consumo optimo: {{ consumoRecomendado }} <h6>
+								<h6> Consumo optimo: {{ this }} <h6>
 							</p>
 						</tr>
 					</div>
@@ -35,7 +32,6 @@
 				</ul>
 			</div>
 		</div>
-		
 			
 		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/> 
 		<div class="py-3">
