--- a/src/main/resources/templates/estandars.hbs
+++ b/src/main/resources/templates/estandars.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="./../../../Untitled.css">
+  <link rel="stylesheet" href="./../../../MainDesign.css">
 </head>
 
 <body>
@@ -79,9 +79,7 @@
           
           
           
-          	<a href="./../../../">
-          		<button type="submit" class="btn btn-primary">Cancelar</button>
-          	</a>	
+          		<button type="submit" class="btn btn-primary" onclick="location.href='./../..'">Cancelar</button>	
 
 
 
