--- a/src/main/resources/templates/Administrador.hbs
+++ b/src/main/resources/templates/Administrador.hbs
@@ -19,7 +19,11 @@
         <ul class="navbar-nav mx-auto">
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
+           
+ 			<li class="nav-item"> <a href="/out">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
         </ul>
       </div>
     </div>
