--- a/src/main/resources/templates/estandars.hbs
+++ b/src/main/resources/templates/estandars.hbs
@@ -21,7 +21,11 @@
           
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
+           
+ 			<li class="nav-item"> <a href="/out">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
         </ul>
       </div>
     </div>
@@ -31,7 +35,7 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-pills">
-            <li        class="nav-item"> <a href="./../../../" class="nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+            <li        class="nav-item"> <a href="/admin" class="nav-link"> <i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
             
             
             <li class="nav-item"> <a class="nav-link" href="/admin/clientes/{{id}}/dispositivos?tipo=inteligente">Inteligente</a> </li>
@@ -79,7 +83,7 @@
           
           
           
-          		<button type="submit" class="btn btn-primary" onclick="location.href='./../..'">Cancelar</button>	
+          		<button type="submit" class="btn btn-primary" onclick="location.href='/admin/Clientes/{{id}}'">Cancelar</button>	
 
 
 
