--- a/src/main/resources/templates/Administrador.hbs
+++ b/src/main/resources/templates/Administrador.hbs
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="Untitled.css">
+  <link rel="stylesheet" href="MainDesign.css">
 </head>
 
 <body>
@@ -19,7 +19,11 @@
         <ul class="navbar-nav mx-auto">
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
+           
+ 			<li class="nav-item"> <a href="/out">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
         </ul>
       </div>
     </div>
@@ -53,6 +57,9 @@
 								<span class="glyphicon glyphicon-plus"></span> +
 								</button>
 						</a>
+						
+						
+						
 					</td>
 				</tr>
 			{{/each}}
