--- a/src/main/resources/templates/AdministradorCliente.hbs
+++ b/src/main/resources/templates/AdministradorCliente.hbs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="./../../../../Untitled.css">
+  <link rel="stylesheet" href="./../../../../MainDesign.css">
 </head>
 
 <body>
@@ -16,13 +16,18 @@
       <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
           <i class="fa d-inline fa-lg fa-circle"></i>
           <b> SSG</b>
-        </a>
+         </a>
         <ul class="navbar-nav mx-auto">
-         
         </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link text-primary" href="./out" contenteditable="true">Log Out</a> </li>
+       
+        <ul 
+        class="navbar-nav">
+ 			<li class="nav-item"> <a href="/out">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
         </ul>
+       
       </div>
     </div>
   </nav>
@@ -31,8 +36,8 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-tabs">
-            <li class="nav-item"> <a href="./../../../" class="active nav-link"><i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
-          </ul>
+            <li class="nav-item"> <a href="/admin" class="active nav-link"><i class="fa fa-home fa-home"></i>&nbsp;Home</a> </li>
+          </ul> <!--./../../../ -->
         </div>
       </div>
       
@@ -51,7 +56,7 @@
         <div class="col-md-12">
         
         
-        
+       
         <div class="py-5 text-center" style="">
     <div class="container">
       <div class="row">
@@ -59,7 +64,7 @@
       </div>
     </div>
   </div>
-
+	
 
 			<h1>Dispositivos estandares</h1>
           <table class="table">
@@ -116,27 +121,26 @@
       </div>
     </div>
   </div>
+  
   <div class="py-5 text-center" style="">
     <div class="container">
       <div class="row">
         <div class="col-md-9 p-3"></div>
         <div class="col-md-3 align-items-center d-flex justify-content-center p-3"> 
-
        		
-       		<a    href="./{{id}}/DispositivosInteligentes">			
+       		<a    href="/admin/clientes/{{id}}/dispositivos">			
 				<button type="button" class="btn btn-default btn-sm">
 				<span class="glyphicon glyphicon-plus"></span> Agregar nuevo dispositivo
 				</button>
-			</a>
+			</a>   
        
         </div>
-        
-        
-        
         
       </div>
     </div>
   </div>
+  
+  <!--
   <div class="py-3">
     <div class="container">
       <div class="row">
@@ -146,6 +150,9 @@
       </div>
     </div>
   </div>
+  -->
+  
+  <!-- 
   <div class="py-5">
     <div class="container">
       <div class="row">
@@ -153,6 +160,7 @@
       </div>
     </div>
   </div>
+  -->
 </body>
 
 </html>
