--- a/src/main/resources/templates/simplex.hbs
+++ b/src/main/resources/templates/simplex.hbs
@@ -3,28 +3,42 @@
 		<meta charset="utf-8">
 		<title> Consumo Recomendado </title>
   		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  		<link rel="stylesheet" href="MainDesign.css">
 	</head>
 	
 	<body>
-		<header>
-			<div class="container-fluid">
-			Sesión iniciada como: {{cliente.usuario}}
-			<button class="btn btn-sm btn-default">Cerrar Sesión</button> 
-			</div>
-		</header>
-		
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
+          <i class="fa d-inline fa-lg fa-circle"></i>
+          <b> SSG      {{names}}       </b>
+        </a>
+        <ul class="navbar-nav mx-auto">
+        </ul>
+        <ul class="navbar-nav">
+           
+ 			<li class="nav-item"> <a href="/userLogout">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 		<br/>
 		<br/>
 		<div class="row">
 			<div class="col-md-12 block-center">
+				<tr> <h3> Consumo recomendado para sus dispositivos: </h3> </tr>
 				<ul class="list-group">
 					{{#each recomendaciones}}
 					<div class="list-group-item">
 						<tr>
 							<h4> <td> {{ @key }} </td> </h4>
 							<p> 
-								<h6> Consumo optimo: {{ this }} <h6>
+								<h6> Consumo optimo: {{ this }} horas<h6>
 							</p>
 						</tr>
 					</div>
