--- a/src/main/resources/templates/user.hbs
+++ b/src/main/resources/templates/user.hbs
@@ -3,23 +3,35 @@
 		<meta charset="utf-8">
 		<title> Bienvenido Usuario </title>
   		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="user.css">
+  		<link rel="stylesheet" href="MainDesign.css">
+  		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 		
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 	</head>
 	
 	<body>
-		<header>
-			<div class="container-fluid">
-			Sesión iniciada como: {{cliente.usuario}}
-		
-			<button class="btn btn-sm btn-default">Cerrar Sesión</button> 
-			</div>
-		</header>
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar12">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar12"> <a class="navbar-brand d-none d-md-block" href="#">
+          <i class="fa d-inline fa-lg fa-circle"></i>
+          <b> SSG      {{names}}       </b>
+        </a>
+        <ul class="navbar-nav mx-auto">
+        </ul>
+        <ul class="navbar-nav">
+           
+ 			<li class="nav-item"> <a href="/userLogout">			
+				<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-plus"></span> Log Out
+				</button></a> </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 		
 		<br/>
 		<br/>
@@ -39,11 +51,6 @@
 				</button>
 			</a> 
 		</div>		
-		
-		<form>
-			
-		</form>
-		
 		
 		<br/>
 		
@@ -84,8 +91,8 @@
 							<h4> <td> {{ nombre }} </td> </h4>
 							<p> 
 								<h6> Estado: {{ estado }} </h6>
-								<h6> Consumo en el último período: {{ consumoUltimoMes }} <h6>
-								<h6> Ultima Medicion: {{ ultimaMedicion }} </h6>
+								<h6> Consumo en el último período: {{ consumoUltimoMes }} kWs <h6>
+								<h6> Ultima Medicion: {{ ultimaMedicion }} kWs </h6>
 							</p>
 						</tr>
 					</div>
@@ -96,8 +103,8 @@
 						<tr>
 							<h4> <td> {{ nombre }} </td> </h4>
 							<p> 
-								<h6> Consumo en el último período: {{ consumoUltimoMes }} <h6>
-								<h6> Ultima Medicion: {{ calcularConsumo }} </h6>
+								<h6> Consumo en el último período: {{ consumoUltimoMes }} kWs <h6>
+								<h6> Ultima Medicion: {{ calcularConsumo }} kWs</h6>
 							</p>
 						</tr>
 					</div>
